# diplom

./: .env.dev  .gitignore  Makefile  PDU-1745414434773.json  README.md  docker-compose.yml  generate_panels.py  new_panels.json  pansels.json  test_current-NEW.json  ГРЩ-1745408853367.json
account-service/: Dockerfile  README.md  go.mod  go.sum  local.yaml
account-service/api/controller/: account.go  login.go
account-service/api/middleware/: middleware.go
account-service/api/route/: account.go  login.go  route.go
account-service/bootstrap/: app.go  config.go  postgre.go  redis.go  setup_log.go
account-service/cmd/: main.go
account-service/domain/: account.go  default_reponse.go  error_response.go  login.go  role.go  session.go  user.go
account-service/repository/: session.go  user.go
account-service/usecase/: account.go  login.go
data-service/: 6859ed06-9bb6-46ff-b401-db7fbbb3eb5f  823ec391-5e8c-4946-be8d-872183975620  Dockerfile  README.md  local.yaml  pyproject.toml
data-service/src/: run.py
data-service/src/api/: router.py
data-service/src/api/views/: data.py  incedent.py  report.py
data-service/src/core/: config.py
data-service/src/providers/: data.py  data_service.py  db.py  incedent.py  incident.py  report.py
data-service/src/repositories/: data.py  incedent.py  report.py
data-service/src/schemes/: data.py  incedent.py  incident.py  report.py
data-service/src/services/: data.py  incedent.py  report.py
dependencies/: README.md  docker-compose.yml  grafana.ini
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/account/: page.tsx
frontend/app/dashboards/: page.tsx
frontend/components/: GraphModal.tsx  MonitoringScheme.tsx  MonitoringSchemeEl.tsx  NavBar.tsx  Navigation.tsx  NotificationMagager.tsx
frontend/contexts/: UserContext.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
producer/: Dockerfile  README.md  generators.py  producer.py  sensor.py  value_generator.py
translator-service/: README.md  go.mod  go.sum  local.yaml
translator-service/bootstrap/: app.go  config.go  postgre.go  websocket.go
translator-service/cmd/: main.go
translator-service/domain/: default_record.go  flap.go  message.go  pressure.go  record.go  temperature.go
translator-service/message_handler/: message_handler.go
translator-service/repository/: record.go
(+98 files in other folders)
